# ai_simulation_pilot

./: .gitignore  README.md  pyproject.toml
samples/: cubic_pressure.inp  hoist.inp  simple_beam.inp  simple_beam_real.inp
src/: __init__.py  main.py
src/api/: __init__.py  main.py
src/config/: settings.py
src/llm/: __init__.py  client.py  prompts.py
src/parser/: __init__.py  abaqus_parser.py  inp_reader.py  section_splitter.py  utils.py
src/schema/: __init__.py  simulation_schema.py
src/services/: __init__.py  explainer.py  geometry.py  validator.py
src/simcopilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_parser.py  test_schema.py
